[gd_scene load_steps=3 format=3 uid="uid://b2ai8x2q3rblp"]

[ext_resource type="Script" path="res://player/weapons/fireball.gd" id="1_e2631"]

[sub_resource type="GDScript" id="GDScript_dx627"]
script/source = "extends Timer

func _on_timeout():
	SignalManager.on_ability_used.emit(true)
"

[node name="Fireball" type="Node"]
script = ExtResource("1_e2631")

[node name="BoostTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="BoostCooldown" type="Timer" parent="."]
wait_time = 30.0
one_shot = true
script = SubResource("GDScript_dx627")

[node name="FireballTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[connection signal="timeout" from="BoostTimer" to="." method="_on_boost_timer_timeout"]
[connection signal="timeout" from="BoostCooldown" to="BoostCooldown" method="_on_timeout"]
[connection signal="timeout" from="FireballTimer" to="." method="_fire_projectile"]
